[package]
name = "rustmap"
version = "0.1.0"
authors = ["Shreyansh Singh <youremail@example.com>"]
edition = "2021"
description = "A blazing-fast port scanner written in Rust — inspired by Nmap, reinvented for modern usage"
homepage = "https://github.com/scr1ptjunk13/rustmap"
repository = "https://github.com/scr1ptjunk13/rustmap"
license = "MIT"
keywords = ["port-scanner", "network", "nmap", "rust"]
categories = ["command-line-utilities", "network-programming"]
exclude = [
    ".github/*",
    "pictures/*",
    "rustscan-debbuilder/*",
]


[dependencies]
clap = { version = "4.5.40", features = ["derive", "wrap_help"] }
colored = "3.0.0"
async-std = "1.13.1"
futures = "0.3"
rlimit = "0.10.2"
log = "0.4.27"
env_logger = "0.11.8"
anstream = "=0.6.19"
dirs = "6.0.0"
gcd = "2.0.1"
rand = "0.9.1"
colorful = "0.3.2"
ansi_term = "0.12.1"
toml = "0.8.23"
serde = "1.0.124"
serde_derive = "1.0.116"
cidr-utils = "0.6.1"
itertools = "0.14.0"
hickory-resolver = { version = "0.24.3", features = ["dns-over-rustls"] }
anyhow = "1.0.40"
text_placeholder = { version = "0.5", features = ["struct_context"] }
once_cell = "1.21.3"

[dev-dependencies]
parameterized = "2.0.0"
wait-timeout = "0.2"
criterion = { version = "0.6", features = ["html_reports"] }

[package.metadata.deb]
depends = "$auto, nmap"
section = "rust"

[profile.release]
lto = true
panic = 'abort'
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rustscan"
path = "src/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }

[[bench]]
name = "benchmark_portscan"
harness = false
